Fix: Ketinggalan Cik
