# public/docs/openapi.yaml
@@ -105,18 +105,38 @@ paths:
                 type: object
                 example:
                   success: true
-                  code: 20000
+                  code: 20100
                   message: 'Category created successfully'
+                  data:
+                    name: Work
+                    updated_at: '2025-09-09T09:50:31.000000Z'
+                    created_at: '2025-09-09T09:50:31.000000Z'
+                    id: 8
                 properties:
                   success:
                     type: boolean
                     example: true
                   code:
                     type: integer
-                    example: 20000
+                    example: 20100
                   message:
                     type: string
                     example: 'Category created successfully'
+                  data:
+                    type: object
+                    properties:
+                      name:
+                        type: string
+                        example: Work
+                      updated_at:
+                        type: string
+                        example: '2025-09-09T09:50:31.000000Z'
+                      created_at:
+                        type: string
+                        example: '2025-09-09T09:50:31.000000Z'
+                      id:
+                        type: integer
+                        example: 8
         422:
           description: ''
           content:
@@ -436,7 +456,7 @@ paths:
                 due_date:
                   type: string
                   description: 'Must be a valid date.'
-                  example: '2025-09-09T07:39:12'
+                  example: '2025-09-09T09:51:42'
                   nullable: false
                 due_date_days:
                   type: integer
@@ -446,7 +466,7 @@ paths:
                 priority:
                   type: string
                   description: ''
-                  example: Medium
+                  example: High
                   nullable: false
                   enum:
                     - High
